--- a/docs/assets/css/anchorjs.css
+++ b/docs/assets/css/anchorjs.css
@@ -6,21 +6,24 @@
     color: inherit !important;
     text-decoration: none !important; /* do not underline */
     }
-    
+
+#search-results .anchorjs-link {
+    right: 0;
+}
     @media (max-width: 768px) {
     /* Do not display AnchorJS icon on less than 768px view point */
     .anchorjs-link {
       display: none;
     }
     }
-    
+
     *:hover > .anchorjs-link {
     opacity: .75;
     /* To fade links as they appear, change transition-property from 'color' to 'all' */
     -webkit-transition: color .16s linear;
     transition: color .16s linear;
     }
-    
+
     *:hover > .anchorjs-link:hover,
     .anchorjs-link:focus {
     text-decoration: none !important; /* do not underline */
